--- a/intune/app/src/main/res/values/strings.xml
+++ b/intune/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">intune</string>
+    <string name="add">ad</string>
+    <string name="delete">delete</string>
+    <string name="log_out">log_out</string>
+
 </resources>
